--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.form {
+    margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input {
+    width: 75%;
+    height: 44px;
+    font-size: 16px;
+    padding-left: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input::placeholder {
+    font-size: 17px;
+    padding-left: 15px;
+    color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn {
+    width: 20%;
+    margin-left: 25px;
+    height: 50px;
+    font-size: 17px;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.card {
+    display: flex;
+    margin: 20px;
+    border: 1px solid black;
+    text-wrap: normal;
+    width: 94.5%;
+    padding-left: 15px;
+    justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.close {
+    margin-right: 15px;
+    font-size: 22px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.text {
+    display: inline-block;
+    word-break: break-all;
+    line-height: 38px;
 }
